--- a/templates/nginx-virtualservice.yaml
+++ b/templates/nginx-virtualservice.yaml
@@ -14,6 +14,6 @@ spec:
             prefix: /
       route:
         - destination:
-            host: nginx-service
+            host: {{ .Values.service.name }}
             port:
               number: 80
